[fresh] effective